# 2022_NCCU_Video-Compression

./: README.md
HW1/project/: CMakeLists.txt  Makefile
HW1/project/include/: Problem1.hpp
HW1/project/src/: Problem1.cpp  main.cpp
HW1_python/: bmp2jpg.py  convertYUV444to420.py  convertYUV444to422.py  huffman_coding.py  main.py  q3_encoded_bitstream.txt  quantizer.py  writeToFile.py  writeToYUVFile.py
HW1_python/yuvs/: q2.yuv  q3.yuv
HW2/: q1.py  q2.py
HW2/q2_output/txt_output/: modes.txt
HW2/txt_output/: motion_vector.txt
HW3/: HW3_1102.docx
